# PassGen

./: README.md  README.org  main.py  pyproject.toml  setup.py
passgen/: __init__.py
passgen/tests/: test_entropy.py  test_generators.py
